--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,15 +1,9 @@
 version: 2.1
 
 description: >
-  Sample orb description
-# What will your orb allow users to accomplish?
-# Descriptions should be short, simple, and informative.
+  Use this Orb to install Flox, activate Flox environments and run commands in
+  those environments.
 
-# This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.example.com/docs"
-  source_url: "https://github.com/<organization>/<project-name>"
-
-# If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-# orbs:
-#  hello: circleci/hello-build@0.0.5
+  home_url: "https://flox.dev
+  source_url: "https://github.com/flox/flox-orb"
