--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -1,10 +1,11 @@
 version: 2.1
+
 orbs:
   # Your orb will be automatically injected here during the pipeline.
   # Reference your orb's jobs and commands below as they will exist when built.
   orb-tools: circleci/orb-tools@12.0
   # The orb definition is intentionally not included here. It will be injected into the pipeline.
-  <orb-name>: {}
+  flox: {}
 
 # Use this tag to ensure test jobs always run,
 # even though the downstream publish job will only run on release tags.
@@ -28,7 +29,12 @@ jobs:
     steps:
       - checkout
       # Run your orb's commands to validate them.
-      - <orb-name>/greet
+      - flox/install
+      # TODO:
+      #- flox/activate:
+      #    environment: "flox/nb"
+      #    command: "python --version"
+
 workflows:
   test-deploy:
     jobs:
@@ -40,12 +46,12 @@ workflows:
       - orb-tools/pack:
           filters: *release-filters
       - orb-tools/publish:
-          orb_name: <namespace>/<orb-name>
+          orb_name: flox/flox
           vcs_type: << pipeline.project.type >>
           pub_type: production
           # Ensure this job requires all test jobs and the pack job.
           requires:
             - orb-tools/pack
             - command-test
-          context: <publishing-context>
+          #TODO: context: <publishing-context>
           filters: *release-filters
