--- a/src/examples/example.yml
+++ b/src/examples/example.yml
@@ -1,13 +1,15 @@
 description: >
-  Sample example description.
-# Provide a use-case based example for using this orb.
-# Everything in the `usage` section will be displayed in the orb registry.
-# Comments are not retained.
+  Install Flox and command in a Flox environment.
+
 usage:
   version: 2.1
   orbs:
-    <orb-name>: <namespace>/<orb-name>@1.2.3
+    flox: flox/flox-orb@1.0.0
   workflows:
     use-my-orb:
       jobs:
-        - <orb-name>/<job-name>
+        - flox/install
+        - flox/activate:
+            environment: "flox/nb"
+            command: "python --version"
+
