--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -5,5 +5,5 @@ description: >
   those environments.
 
 display:
-  home_url: "https://flox.dev
+  home_url: "https://flox.dev"
   source_url: "https://github.com/flox/flox-orb"
