--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -47,7 +47,7 @@ workflows:
           filters: *release-filters
       - orb-tools/publish:
           orb_name: flox/flox
-          vcs_type: << pipeline.project.type >>
+          vcs_type: github
           pub_type: production
           # Ensure this job requires all test jobs and the pack job.
           requires:
