--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -28,12 +28,10 @@ jobs:
       - image: cimg/base:current
     steps:
       - checkout
-      # Run your orb's commands to validate them.
       - flox/install
-      # TODO:
-      #- flox/activate:
-      #    environment: "flox/nb"
-      #    command: "python --version"
+      - flox/activate:
+          environment: "flox/nb"
+          command: "python --version"
 
 workflows:
   test-deploy:
