--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -23,7 +23,7 @@ release-filters: &release-filters
 jobs:
   # Create jobs to test the commands of your orbs.
   # You may want to add additional validation steps to ensure the commands are working as expected.
-  command-test:
+  remote-environment-test:
     docker:
       - image: cimg/base:current
     steps:
@@ -38,7 +38,7 @@ workflows:
     jobs:
       # Make sure to include "filters: *filters" in every test job you want to run as part of your deployment.
       # Test your orb's commands in a custom job and test your orb's jobs directly as a part of this workflow.
-      - command-test:
+      - remote-environment-test:
           filters: *filters
       # The orb must be re-packed for publishing, and saved to the workspace.
       - orb-tools/pack:
@@ -50,6 +50,6 @@ workflows:
           # Ensure this job requires all test jobs and the pack job.
           requires:
             - orb-tools/pack
-            - command-test
+            - remote-environment-test 
           #TODO: context: <publishing-context>
           filters: *release-filters
