--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -31,7 +31,9 @@ jobs:
       - flox/install
       - flox/activate:
           environment: "flox/nb"
-          command: "python --version"
+          command: >
+            python --version
+            which python
 
 workflows:
   test-deploy:
