be extra sure we are disabling the metrics

--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -26,6 +26,8 @@ jobs:
   remote-environment-test:
     machine:
       image: ubuntu-2204:current
+    environment:
+      FLOX_DISABLE_METRICS: true
     steps:
       - checkout
       - flox/install
