test multiline command again

--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -33,7 +33,9 @@ jobs:
       - flox/install
       - flox/activate:
           environment: "flox/nb"
-          command: "which python"
+          command: >
+            python --version
+            which python
 
 workflows:
   test-deploy:
