--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -1,10 +1,11 @@
 version: 2.1
+
 orbs:
   # Your orb will be automatically injected here during the pipeline.
   # Reference your orb's jobs and commands below as they will exist when built.
   orb-tools: circleci/orb-tools@12.0
   # The orb definition is intentionally not included here. It will be injected into the pipeline.
-  <orb-name>: {}
+  flox: {}
 
 # Use this tag to ensure test jobs always run,
 # even though the downstream publish job will only run on release tags.
@@ -22,30 +23,35 @@ release-filters: &release-filters
 jobs:
   # Create jobs to test the commands of your orbs.
   # You may want to add additional validation steps to ensure the commands are working as expected.
-  command-test:
-    docker:
-      - image: cimg/base:current
+  remote-environment-test:
+    machine:
+      image: ubuntu-2204:current
+    environment:
+      FLOX_DISABLE_METRICS: true
     steps:
       - checkout
-      # Run your orb's commands to validate them.
-      - <orb-name>/greet
+      - flox/install
+      - flox/activate:
+          environment: "flox/nb"
+          command: "python --version"
+
 workflows:
   test-deploy:
     jobs:
       # Make sure to include "filters: *filters" in every test job you want to run as part of your deployment.
       # Test your orb's commands in a custom job and test your orb's jobs directly as a part of this workflow.
-      - command-test:
+      - remote-environment-test:
           filters: *filters
       # The orb must be re-packed for publishing, and saved to the workspace.
       - orb-tools/pack:
           filters: *release-filters
       - orb-tools/publish:
-          orb_name: <namespace>/<orb-name>
-          vcs_type: << pipeline.project.type >>
+          orb_name: flox/flox
+          vcs_type: github
           pub_type: production
           # Ensure this job requires all test jobs and the pack job.
           requires:
             - orb-tools/pack
-            - command-test
-          context: <publishing-context>
+            - remote-environment-test 
+          #TODO: context: <publishing-context>
           filters: *release-filters
