--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -46,7 +46,7 @@ workflows:
       - orb-tools/pack:
           filters: *release-filters
       - orb-tools/publish:
-          orb_name: flox/flox
+          orb_name: flox/orb
           vcs_type: github
           pub_type: production
           # Ensure this job requires all test jobs and the pack job.
